# TabPFN-rs

./: CHANGELOG.md  Cargo.toml  DELAY.md  DETERMINISTIC_RNG_IMPLEMENTATION_STATUS.md  DOCSRS.md  IMPLEMENTATION_PATCH.diff  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  MINIMAL_CARGO_TOML.md  PYTHON_COMPARISON_GUIDE.md  README_TENSOR_SLICE_ASSIGN.md  REFACTOR_COMPLETION_REPORT.md  REFACTOR_SUMMARY.md  SCOPE_AUDIT_RESULTS.json  SERENA-DEPLOYMENT.md  SERENA.md  TABPFN_IMPLEMENTATION_REPORT.md  TDD_COMPLETION_REPORT.md  TDD_IMPLEMENTATION_REPORT.md  TECHNICAL_CHANGES.md  TENSOR_REFACTOR_SCAN_REPORT.md  TEST_INSTRUCTIONS.md  TRANSFORMER_README.md  VALIDATION_CHECKLIST.md  VERIFICATION.md  check_forbidden_patterns  check_forbidden_patterns.rs  debug_burn_weights.rs  debug_tensor_test.rs  main.py  minimal_cargo_toml.md  pyproject.toml  python_comparison.py  python_comparison_transformer.py  python_cross_check.py  python_reference.py  self_check_validation.md  simple_test_verification.rs  tab_pfn_rs.long-type-103534157539794960.txt  tab_pfn_rs.long-type-12685945465778955923.txt  (+10 more)
.serena/: project.yml
TabPFN-rs/: unimplemented_tasks.md
benches/: attention_performance.rs
docs/: DETERMINISM.md  TENSOR_SPECIFICATION.md  phase1_verifications.md  phase2_status.md  phase3_completion.md  phase3_performance_audit.md  phase4_completion.md  phase5_completion.md
examples/: tensor_slice_assign_demo.rs
fixtures/: basic_self_attn_small.test  create_dummy_fixtures.py  cross_attention.test  different_dk_dv.test  kv_sharing.test  large_batch_dropout.test  manifest.json  (+4 more)
(+134 files in other folders)
