[package]
name = "tab_pfn_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.18.0", features = ["wgpu", "cuda", "autodiff"] }
burn-ndarray = "0.18.0"
burn-wgpu = { version = "0.18.0", optional = true }
burn-cuda = { version = "0.18.0", optional = true }
burn-autodiff = "0.18.0"
polars = "0.50.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = "1.47.1"
config = "0.14.1"
dirs = "5.0.1"
num-traits = "0.2.19"
log = "0.4.22"
petgraph = "0.6.5"
nalgebra = "0.33.0"
rand = "0.8.5"

# Temporarily commented out binary targets due to compilation errors
# Will be re-enabled once the architecture modules are fixed

# [[bin]]
# name = "test_mlp_equivalence"
# path = "src/bin/test_mlp_equivalence.rs"

# [[bin]]
# name = "debug_weights"
# path = "src/bin/debug_weights.rs"

# [[bin]]
# name = "test_attention_equivalence"
# path = "src/bin/test_attention_equivalence.rs"

# [[bin]]
# name = "test_dropout_functionality"
# path = "src/bin/test_dropout_functionality.rs"

# [[bin]]
# name = "test_set_parameters"
# path = "src/bin/test_set_parameters.rs"

# [[bin]]
# name = "test_layer_equivalence"
# path = "src/bin/test_layer_equivalence.rs"

# [[bin]]
# name = "test_transformer_graph_operations"
# path = "src/bin/test_transformer_graph_operations.rs"

[features]
default = ["wgpu"]
wgpu = ["burn-wgpu"]
cuda = ["burn-cuda"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"